--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "MG S5 EV 2025 - crossover điện cỡ B+ ra mắt",
+    "content": "MG S5 EV 2025 là mẫu crossover điện cỡ B+ vừa được giới thiệu tại Thái Lan, với hai phiên bản công suất 170 và 245 mã lực. Xe có kích thước lớn hơn Toyota Corolla Cross và trang bị nhiều công nghệ hiện đại như màn hình cảm ứng 12,8 inch và hệ thống an toàn ADAS. S5 EV hứa hẹn mang lại phạm vi hoạt động 416 km cho phiên bản thấp hơn và 550 km cho phiên bản cao cấp hơn. Sự ra mắt chính thức sẽ diễn ra tại triển lãm Bangkok Motor Show vào cuối tháng 3.",
+    "link": "https://vnexpress.net/mg-s5-ev-2025-crossover-dien-co-b-ra-mat-4863137.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "MG S5 EV 2025 vừa được giới thiệu có những tính năng gì nổi bật?",
+    "answers": [
+      {
+        "text": "Crossover điện cỡ B+ với công nghệ ADAS và màn hình cảm ứng lớn.",
+        "correct": true
+      },
+      {
+        "text": "Xe chạy xăng với động cơ truyền thống.",
+        "correct": false
+      },
+      {
+        "text": "Có kích thước nhỏ hơn Toyota Corolla Cross.",
+        "correct": false
+      },
+      {
+        "text": "Không trang bị công nghệ an toàn nào.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lắp trạm bơm chống ngập cho đoạn quốc lộ 1 qua TP HCM",
     "content": "TP HCM sẽ lắp đặt một trạm bơm với công suất 6.000 m3/h để xử lý tình trạng ngập úng trên đoạn quốc lộ 1 dài hơn 1,3 km gần cầu An Lập, quận Bình Tân. Quyết định này được UBND TP HCM chấp thuận sau khi có đề xuất từ Sở Giao thông công chánh. Khu vực này thường xuyên bị ngập do địa hình thấp và các yếu tố thời tiết, gây khó khăn cho người dân. Tổng kinh phí cho việc lắp đặt trạm bơm này là hơn 11 tỷ đồng.",
     "link": "https://vnexpress.net/lap-tram-bom-chong-ngap-cho-doan-quoc-lo-1-qua-tp-hcm-4863269.html",
@@ -842,33 +869,6 @@
     ]
   },
   {
-    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
-    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
-    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
-    "answers": [
-      {
-        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
-        "correct": true
-      },
-      {
-        "text": "Không, đau lưng chỉ do xương khớp.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng không liên quan đến thần kinh.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng chỉ là vấn đề tạm thời.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
     "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
     "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
@@ -891,6 +891,33 @@
       },
       {
         "text": "Để mở rộng thị trường sang châu Á.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
+    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
+    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
+    "answers": [
+      {
+        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
+        "correct": true
+      },
+      {
+        "text": "Không, đau lưng chỉ do xương khớp.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng không liên quan đến thần kinh.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng chỉ là vấn đề tạm thời.",
         "correct": false
       }
     ]
@@ -1321,37 +1348,6 @@
     ]
   },
   {
-    "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
-    "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
-    "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Những dấu hiệu nào ở tay và vai có thể cảnh báo ung thư phổi?",
-    "answers": [
-      {
-        "text": "Triệu chứng ngón tay, bả vai bị ảnh hưởng",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng",
-        "correct": false
-      },
-      {
-        "text": "Mệt mỏi",
-        "correct": false
-      },
-      {
-        "text": "Chóng mặt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
     "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
     "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
@@ -1378,6 +1374,37 @@
       },
       {
         "text": "6 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
+    "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
+    "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Những dấu hiệu nào ở tay và vai có thể cảnh báo ung thư phổi?",
+    "answers": [
+      {
+        "text": "Triệu chứng ngón tay, bả vai bị ảnh hưởng",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi",
+        "correct": false
+      },
+      {
+        "text": "Chóng mặt",
         "correct": false
       }
     ]
@@ -1723,33 +1750,6 @@
     ]
   },
   {
-    "title": "Chơi tung hứng với bố, bé một tuổi gãy xương đùi",
-    "content": "Trong một vụ tai nạn đáng tiếc, một bé trai một tuổi đã bị gãy xương đùi khi chơi tung hứng với bố. Sau khi nhập viện với tình trạng đau đớn và sợ hãi, bé được bác sĩ tiến hành bó bột toàn thân để ổn định xương gãy. Bác sĩ khuyến cáo rằng các trò chơi mạnh có thể gây hại cho trẻ nhỏ, không chỉ làm gãy xương mà còn ảnh hưởng đến hệ thần kinh của trẻ.",
-    "link": "https://vnexpress.net/choi-tung-hung-voi-bo-be-mot-tuoi-gay-xuong-dui-4862991.html",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao bé một tuổi bị gãy xương đùi khi chơi tung hứng với bố?",
-    "answers": [
-      {
-        "text": "Bé bị gãy xương do chơi tung hứng với bố.",
-        "correct": true
-      },
-      {
-        "text": "Bé bị ngã trong khi chơi đùa.",
-        "correct": false
-      },
-      {
-        "text": "Bé bị tai nạn khi chạy nhảy.",
-        "correct": false
-      },
-      {
-        "text": "Bé bị va chạm với đồ vật trong nhà.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Trẻ rụng tóc do thiếu chất gì?",
     "content": "Trẻ bị rụng tóc có thể do thiếu hụt nhiều loại vitamin và khoáng chất thiết yếu như vitamin B, C, D, sắt, kẽm và selen trong chế độ dinh dưỡng hàng ngày. Thiếu dinh dưỡng có thể dẫn đến tình trạng tóc rụng nhiều hơn 100 sợi mỗi ngày, tóc yếu và dễ gãy. Bác sĩ Trần Thị Trà Phương đã nhấn mạnh tầm quan trọng của việc bổ sung các chất dinh dưỡng này để giúp tóc phát triển khỏe mạnh và ngăn ngừa rụng tóc ở trẻ em.",
     "link": "https://vnexpress.net/tre-rung-toc-do-thieu-chat-gi-4862999.html",
@@ -1803,6 +1803,33 @@
       },
       {
         "text": "Bệnh xương hóa đá là một chứng bệnh da liễu.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chơi tung hứng với bố, bé một tuổi gãy xương đùi",
+    "content": "Trong một vụ tai nạn đáng tiếc, một bé trai một tuổi đã bị gãy xương đùi khi chơi tung hứng với bố. Sau khi nhập viện với tình trạng đau đớn và sợ hãi, bé được bác sĩ tiến hành bó bột toàn thân để ổn định xương gãy. Bác sĩ khuyến cáo rằng các trò chơi mạnh có thể gây hại cho trẻ nhỏ, không chỉ làm gãy xương mà còn ảnh hưởng đến hệ thần kinh của trẻ.",
+    "link": "https://vnexpress.net/choi-tung-hung-voi-bo-be-mot-tuoi-gay-xuong-dui-4862991.html",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao bé một tuổi bị gãy xương đùi khi chơi tung hứng với bố?",
+    "answers": [
+      {
+        "text": "Bé bị gãy xương do chơi tung hứng với bố.",
+        "correct": true
+      },
+      {
+        "text": "Bé bị ngã trong khi chơi đùa.",
+        "correct": false
+      },
+      {
+        "text": "Bé bị tai nạn khi chạy nhảy.",
+        "correct": false
+      },
+      {
+        "text": "Bé bị va chạm với đồ vật trong nhà.",
         "correct": false
       }
     ]
@@ -2256,33 +2283,6 @@
     ]
   },
   {
-    "title": "Nhiều nhân giáp gây nổi bướu vùng cổ người phụ nữ",
-    "content": "Bài viết mô tả trường hợp của chị Hiền, 54 tuổi, ở TP.HCM, bị bướu giáp đa nhân sau khi phát hiện nổi u ở cổ. Qua chẩn đoán, bác sĩ xác định chị mắc ung thư biểu mô tuyến giáp thể nhú biến thể nang, tuy nhiên bệnh có tiên lượng tốt với tỷ lệ sống trên 5 năm hơn 98%. Sau ca phẫu thuật thành công, bệnh nhân hồi phục nhanh chóng và cần theo dõi định kỳ để phòng ngừa.",
-    "link": "https://vnexpress.net/nhieu-nhan-giap-gay-noi-buou-vung-co-nguoi-phu-nu-4862920.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chị Hiền mắc bệnh gì sau khi nổi bướu ở cổ?",
-    "answers": [
-      {
-        "text": "Ung thư biểu mô tuyến giáp thể nhú biến thể nang",
-        "correct": true
-      },
-      {
-        "text": "Bệnh tim mạch",
-        "correct": false
-      },
-      {
-        "text": "Tiểu đường",
-        "correct": false
-      },
-      {
-        "text": "Bệnh phổi mãn tính",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
     "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
     "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
@@ -2332,6 +2332,33 @@
       },
       {
         "text": "Căng thẳng tâm lý",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhiều nhân giáp gây nổi bướu vùng cổ người phụ nữ",
+    "content": "Bài viết mô tả trường hợp của chị Hiền, 54 tuổi, ở TP.HCM, bị bướu giáp đa nhân sau khi phát hiện nổi u ở cổ. Qua chẩn đoán, bác sĩ xác định chị mắc ung thư biểu mô tuyến giáp thể nhú biến thể nang, tuy nhiên bệnh có tiên lượng tốt với tỷ lệ sống trên 5 năm hơn 98%. Sau ca phẫu thuật thành công, bệnh nhân hồi phục nhanh chóng và cần theo dõi định kỳ để phòng ngừa.",
+    "link": "https://vnexpress.net/nhieu-nhan-giap-gay-noi-buou-vung-co-nguoi-phu-nu-4862920.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chị Hiền mắc bệnh gì sau khi nổi bướu ở cổ?",
+    "answers": [
+      {
+        "text": "Ung thư biểu mô tuyến giáp thể nhú biến thể nang",
+        "correct": true
+      },
+      {
+        "text": "Bệnh tim mạch",
+        "correct": false
+      },
+      {
+        "text": "Tiểu đường",
+        "correct": false
+      },
+      {
+        "text": "Bệnh phổi mãn tính",
         "correct": false
       }
     ]
@@ -2623,28 +2650,28 @@
     ]
   },
   {
-    "title": "Bắc thang gần 4 m vào nhà tại công trường Vành đai 3 TP HCM",
-    "content": "Nhiều hộ dân tại xa lộ Hà Nội, gần cầu vượt Tân Vạn, TP Dĩ An đang phải bắc thang cao gần 4 m để vào nhà do công trình Vành đai 3 TP HCM thi công, khiến mặt đường hạ thấp hơn so với nhà. Tình trạng này đã diễn ra từ cuối năm ngoái, gây khó khăn trong việc đi lại và buôn bán của người dân. Họ cho biết thu nhập giảm sút nghiêm trọng do công trường thi công, khiến khách hàng không còn ghé thăm như trước.",
-    "link": "https://vnexpress.net/bac-thang-gan-4-m-vao-nha-tai-cong-truong-vanh-dai-3-tp-hcm-4862463.html",
-    "cat": "thoi-su",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao nhiều hộ dân ở xa lộ Hà Nội phải bắc thang vào nhà?",
+    "title": "NSƯT Bùi Như Lai \"Cha tôi, người ở lại\": Nhận mình lạnh lùng, sợ… nổi tiếng",
+    "content": "NSƯT Bùi Như Lai chia sẻ về cuộc sống và vai diễn trong bộ phim \"Cha tôi, người ở lại\", một tác phẩm Việt hóa từ phim Trung Quốc. Anh tự nhận mình là người lạnh lùng, không thích nổi tiếng và thường dành thời gian cho công việc quản lý tại Trường Đại học Sân khấu - Điện ảnh Hà Nội. Bùi Như Lai cũng nhấn mạnh tầm quan trọng của việc giữ gìn sự gần gũi với khán giả thông qua các vai diễn, mặc dù không muốn trở thành một ngôi sao giải trí. Anh đang hài lòng với cuộc sống bình dị cùng gia đình và công việc nghệ thuật.",
+    "link": "https://dantri.com.vn/giai-tri/nsut-bui-nhu-lai-cha-toi-nguoi-o-lai-nhan-minh-lanh-lung-so-noi-tieng-20250317220936197.htm",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 6,
+    "question": "NSƯT Bùi Như Lai có những suy nghĩ gì về việc nổi tiếng?",
     "answers": [
       {
-        "text": "Vì mặt đường công trình Vành đai 3 hạ thấp hơn nhà.",
+        "text": "Anh không thích nổi tiếng và tự nhận mình lạnh lùng.",
         "correct": true
       },
       {
-        "text": "Do nhà bị giải tỏa một phần.",
+        "text": "Anh mong muốn trở thành một ngôi sao giải trí.",
         "correct": false
       },
       {
-        "text": "Vì họ muốn làm đẹp cho ngôi nhà.",
+        "text": "Anh muốn tham gia nhiều phim truyền hình.",
         "correct": false
       },
       {
-        "text": "Do thời tiết xấu làm hỏng cầu thang.",
+        "text": "Anh không quan tâm đến sự nổi tiếng trong ngành giải trí.",
         "correct": false
       }
     ]
@@ -2708,28 +2735,28 @@
     ]
   },
   {
-    "title": "NSƯT Bùi Như Lai \"Cha tôi, người ở lại\": Nhận mình lạnh lùng, sợ… nổi tiếng",
-    "content": "NSƯT Bùi Như Lai chia sẻ về cuộc sống và vai diễn trong bộ phim \"Cha tôi, người ở lại\", một tác phẩm Việt hóa từ phim Trung Quốc. Anh tự nhận mình là người lạnh lùng, không thích nổi tiếng và thường dành thời gian cho công việc quản lý tại Trường Đại học Sân khấu - Điện ảnh Hà Nội. Bùi Như Lai cũng nhấn mạnh tầm quan trọng của việc giữ gìn sự gần gũi với khán giả thông qua các vai diễn, mặc dù không muốn trở thành một ngôi sao giải trí. Anh đang hài lòng với cuộc sống bình dị cùng gia đình và công việc nghệ thuật.",
-    "link": "https://dantri.com.vn/giai-tri/nsut-bui-nhu-lai-cha-toi-nguoi-o-lai-nhan-minh-lanh-lung-so-noi-tieng-20250317220936197.htm",
-    "cat": "giai-tri",
-    "positivity": 7,
-    "importance": 6,
-    "question": "NSƯT Bùi Như Lai có những suy nghĩ gì về việc nổi tiếng?",
+    "title": "Bắc thang gần 4 m vào nhà tại công trường Vành đai 3 TP HCM",
+    "content": "Nhiều hộ dân tại xa lộ Hà Nội, gần cầu vượt Tân Vạn, TP Dĩ An đang phải bắc thang cao gần 4 m để vào nhà do công trình Vành đai 3 TP HCM thi công, khiến mặt đường hạ thấp hơn so với nhà. Tình trạng này đã diễn ra từ cuối năm ngoái, gây khó khăn trong việc đi lại và buôn bán của người dân. Họ cho biết thu nhập giảm sút nghiêm trọng do công trường thi công, khiến khách hàng không còn ghé thăm như trước.",
+    "link": "https://vnexpress.net/bac-thang-gan-4-m-vao-nha-tai-cong-truong-vanh-dai-3-tp-hcm-4862463.html",
+    "cat": "thoi-su",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao nhiều hộ dân ở xa lộ Hà Nội phải bắc thang vào nhà?",
     "answers": [
       {
-        "text": "Anh không thích nổi tiếng và tự nhận mình lạnh lùng.",
+        "text": "Vì mặt đường công trình Vành đai 3 hạ thấp hơn nhà.",
         "correct": true
       },
       {
-        "text": "Anh mong muốn trở thành một ngôi sao giải trí.",
+        "text": "Do nhà bị giải tỏa một phần.",
         "correct": false
       },
       {
-        "text": "Anh muốn tham gia nhiều phim truyền hình.",
+        "text": "Vì họ muốn làm đẹp cho ngôi nhà.",
         "correct": false
       },
       {
-        "text": "Anh không quan tâm đến sự nổi tiếng trong ngành giải trí.",
+        "text": "Do thời tiết xấu làm hỏng cầu thang.",
         "correct": false
       }
     ]
