--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,64 @@
     */
     const newsData = [
   {
+    "title": "Bắt cựu nhân viên ngân hàng HDbank ở Sơn La",
+    "content": "Nguyễn Huy Lâm, một cựu nhân viên của ngân hàng HDBank chi nhánh Sơn La, đã bị bắt giữ vì tội lừa đảo chiếm đoạt tài sản. Hắn đã lợi dụng danh nghĩa nhân viên ngân hàng để gian dối chiếm đoạt 950 triệu đồng từ ngân hàng thông qua hợp đồng vay vốn của khách hàng. Cơ quan Cảnh sát điều tra đã ra quyết định khởi tố và kêu gọi những ai là nạn nhân liên quan đến vụ việc này đến trình báo.",
+    "link": "https://tuoitre.vn/bat-cuu-nhan-vien-ngan-hang-hdbank-o-son-la-20250319152703889.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Nguyễn Huy Lâm bị bắt vì lý do gì?",
+    "answers": [
+      {
+        "text": "Lừa đảo chiếm đoạt tài sản",
+        "correct": true
+      },
+      {
+        "text": "Trộm cắp xe",
+        "correct": false
+      },
+      {
+        "text": "Giả mạo giấy tờ",
+        "correct": false
+      },
+      {
+        "text": "Đánh bạc trái phép",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đến giải quyết mâu thuẫn, vừa xuống xe vung dao chém chết người",
+    "content": "Vào khoảng 22h ngày 18-3, tại xã Long Tiên, huyện Cai Lậy, tỉnh Tiền Giang, một vụ án mạng nghiêm trọng đã xảy ra khi Ngô Thanh Phương đến gặp Nguyễn Thành Nam để giải quyết mâu thuẫn. Khi vừa xuống xe, Nam đã dùng dao chém nhiều nhát vào đầu và tay của Phương, gây thương tích nghiêm trọng. Phương được đưa đến bệnh viện nhưng đã tử vong sau đó. Cảnh sát hiện đang truy bắt Nam để phục vụ điều tra.",
+    "link": "https://tuoitre.vn/den-giai-quyet-mau-thuan-vua-xuong-xe-vung-dao-chem-chet-nguoi-20250319105235081.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 9,
+    "question": "Vụ án mạng ở Tiền Giang xảy ra như thế nào?",
+    "answers": [
+      {
+        "text": "Ngô Thanh Phương bị Nguyễn Thành Nam chém chết khi đến giải quyết mâu thuẫn.",
+        "correct": true
+      },
+      {
+        "text": "Nam bị thương nặng sau khi chém Phương.",
+        "correct": false
+      },
+      {
+        "text": "Phương đã bỏ trốn khỏi hiện trường sau khi gây án.",
+        "correct": false
+      },
+      {
+        "text": "Vụ việc xảy ra trong một quán nhậu.",
+        "correct": false
+      },
+      {
+        "text": "Cảnh sát đã bắt được Nam ngay tại hiện trường.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chú chó đắt nhất thế giới",
     "content": "Chú chó Cadabomb Okami, một giống chó lai giữa sói và chó chăn cừu Caucasian, đã được bán với giá 5,7 triệu USD, trở thành chú chó đắt nhất thế giới. Chú chó 8 tháng tuổi này nặng 75 kg và cao 76 cm, nổi bật với tính trung thành và thông minh. Được mua bởi ông S Sathish, một nhà sưu tầm chó nổi tiếng ở Ấn Độ, Okami đã thu hút sự chú ý lớn và tạo ra làn sóng phấn khích trong cộng đồng yêu chó.",
     "link": "https://vnexpress.net/chu-cho-dat-nhat-the-gioi-4863133.html",
@@ -1287,33 +1345,6 @@
     ]
   },
   {
-    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
-    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
-    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
-    "answers": [
-      {
-        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
-        "correct": true
-      },
-      {
-        "text": "Không, đau lưng chỉ do xương khớp.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng không liên quan đến thần kinh.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng chỉ là vấn đề tạm thời.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
     "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
     "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
@@ -1336,6 +1367,33 @@
       },
       {
         "text": "Để mở rộng thị trường sang châu Á.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
+    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
+    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
+    "answers": [
+      {
+        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
+        "correct": true
+      },
+      {
+        "text": "Không, đau lưng chỉ do xương khớp.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng không liên quan đến thần kinh.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng chỉ là vấn đề tạm thời.",
         "correct": false
       }
     ]
@@ -2728,33 +2786,6 @@
     ]
   },
   {
-    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
-    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
-    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
-    "answers": [
-      {
-        "text": "Vì anh Mạnh mắc ung thư máu.",
-        "correct": true
-      },
-      {
-        "text": "Vì anh Mạnh bị nhiễm virus.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh Mạnh ăn uống không điều độ.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nhiều nhân giáp gây nổi bướu vùng cổ người phụ nữ",
     "content": "Bài viết mô tả trường hợp của chị Hiền, 54 tuổi, ở TP.HCM, bị bướu giáp đa nhân sau khi phát hiện nổi u ở cổ. Qua chẩn đoán, bác sĩ xác định chị mắc ung thư biểu mô tuyến giáp thể nhú biến thể nang, tuy nhiên bệnh có tiên lượng tốt với tỷ lệ sống trên 5 năm hơn 98%. Sau ca phẫu thuật thành công, bệnh nhân hồi phục nhanh chóng và cần theo dõi định kỳ để phòng ngừa.",
     "link": "https://vnexpress.net/nhieu-nhan-giap-gay-noi-buou-vung-co-nguoi-phu-nu-4862920.html",
@@ -2777,6 +2808,33 @@
       },
       {
         "text": "Bệnh phổi mãn tính",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
+    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
+    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
+    "answers": [
+      {
+        "text": "Vì anh Mạnh mắc ung thư máu.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh Mạnh bị nhiễm virus.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh Mạnh ăn uống không điều độ.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
         "correct": false
       }
     ]
@@ -3041,6 +3099,60 @@
     ]
   },
   {
+    "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
+    "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
+    "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Dị ứng phấn hoa ảnh hưởng đến người Việt ở nước ngoài như thế nào?",
+    "answers": [
+      {
+        "text": "Nó khiến họ phải bỏ việc và trở về nước.",
+        "correct": true
+      },
+      {
+        "text": "Nó không ảnh hưởng nhiều đến công việc.",
+        "correct": false
+      },
+      {
+        "text": "Người mắc dị ứng phấn hoa luôn khỏe mạnh.",
+        "correct": false
+      },
+      {
+        "text": "Mọi người đều thích mùa xuân và không lo lắng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị PT ép tập gym quá sức",
+    "content": "Bài viết kể về Tùng, một người tập gym bị huấn luyện viên cá nhân (PT) ép tập luyện quá sức. Sau hai tuần với cường độ cao, Tùng cảm thấy cơ thể kiệt sức và phải dừng tập do chấn thương và các triệu chứng suy nhược. Ngoài Tùng, một trường hợp khác là Thúy Mai cũng gặp tình trạng tương tự khi bị ép tập với cường độ cao dẫn đến chấn thương. Các bác sĩ khuyến cáo rằng việc tập luyện cần có sự cân bằng và không nên ép cơ thể làm việc quá mức, nhằm tránh chấn thương và ảnh hưởng đến sức khỏe.",
+    "link": "https://vnexpress.net/bi-pt-ep-tap-gym-qua-suc-4862236.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao Tùng phải dừng tập gym?",
+    "answers": [
+      {
+        "text": "Vì bị ép tập quá sức dẫn đến kiệt sức và chấn thương.",
+        "correct": true
+      },
+      {
+        "text": "Vì không thích tập gym nữa.",
+        "correct": false
+      },
+      {
+        "text": "Vì không có thời gian tập.",
+        "correct": false
+      },
+      {
+        "text": "Vì không có huấn luyện viên cá nhân.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phụ huynh bị đưa ra xét xử vì ép con \"thú tội\" giữa trời 7 độ C",
     "content": "Một cặp phụ huynh ở Indiana, Mỹ, đang bị truy tố vì đã ép con gái 6 tuổi đứng ngoài trời lạnh 7 độ C trong nhiều giờ cầm tấm biển \"thú tội\". Họ cho rằng hình phạt này là cần thiết để dạy dỗ con gái, nhưng hành động này đã gây ra sự phẫn nộ trong cộng đồng. Cha của bé gái, một cảnh sát, vẫn khăng khăng cho rằng hình phạt này là cách duy nhất để giáo dục con. Cảnh sát đã vào cuộc sau khi có báo cáo từ những người qua đường chứng kiến sự việc.",
     "link": "https://dantri.com.vn/giao-duc/phu-huynh-bi-dua-ra-xet-xu-vi-ep-con-thu-toi-giua-troi-7-do-c-20250318124813740.htm",
@@ -3152,60 +3264,6 @@
       },
       {
         "text": "30/3/2025",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị PT ép tập gym quá sức",
-    "content": "Bài viết kể về Tùng, một người tập gym bị huấn luyện viên cá nhân (PT) ép tập luyện quá sức. Sau hai tuần với cường độ cao, Tùng cảm thấy cơ thể kiệt sức và phải dừng tập do chấn thương và các triệu chứng suy nhược. Ngoài Tùng, một trường hợp khác là Thúy Mai cũng gặp tình trạng tương tự khi bị ép tập với cường độ cao dẫn đến chấn thương. Các bác sĩ khuyến cáo rằng việc tập luyện cần có sự cân bằng và không nên ép cơ thể làm việc quá mức, nhằm tránh chấn thương và ảnh hưởng đến sức khỏe.",
-    "link": "https://vnexpress.net/bi-pt-ep-tap-gym-qua-suc-4862236.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao Tùng phải dừng tập gym?",
-    "answers": [
-      {
-        "text": "Vì bị ép tập quá sức dẫn đến kiệt sức và chấn thương.",
-        "correct": true
-      },
-      {
-        "text": "Vì không thích tập gym nữa.",
-        "correct": false
-      },
-      {
-        "text": "Vì không có thời gian tập.",
-        "correct": false
-      },
-      {
-        "text": "Vì không có huấn luyện viên cá nhân.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
-    "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
-    "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Dị ứng phấn hoa ảnh hưởng đến người Việt ở nước ngoài như thế nào?",
-    "answers": [
-      {
-        "text": "Nó khiến họ phải bỏ việc và trở về nước.",
-        "correct": true
-      },
-      {
-        "text": "Nó không ảnh hưởng nhiều đến công việc.",
-        "correct": false
-      },
-      {
-        "text": "Người mắc dị ứng phấn hoa luôn khỏe mạnh.",
-        "correct": false
-      },
-      {
-        "text": "Mọi người đều thích mùa xuân và không lo lắng.",
         "correct": false
       }
     ]
